<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
    android:id="@+id/topmenu">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_history" android:title="@string/action_history"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_scan" android:title="@string/action_scan"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_findme" android:title="@string/action_findme"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
